[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image", "advanced", "tokio"] }
serde_json = "1.0.140"
reqwest = "0.12.14"
r34_api = "0.3.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.97"
